--- a/main.css
+++ b/main.css
@@ -4,6 +4,11 @@ body {
     background-color: lightblue;
 }
 
+body h1 {
+    text-align: center;
+    color: blue;
+}
+
 main {
     margin: 200px;
     width: 80%;
